Fixed footer overlaps
Just had to remove Position: absolute;

:+1:

--- a/frontend/src/css/about.css
+++ b/frontend/src/css/about.css
@@ -7,8 +7,7 @@ a {
 }
 
 .About {
-    position: absolute;
-    width: 100%;
+    /*future usage*/
 }
 
 .memberInfo {
